--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -99,7 +99,16 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="15" y="72" width="341" height="110"/>
+                                    <rect key="frame" x="15" y="72" width="341" height="114"/>
+                                </variation>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wN-kk-nXE">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="15" y="212" width="248" height="21"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -111,6 +120,7 @@
                                 <exclude reference="L4o-i6-GlH"/>
                                 <exclude reference="zKK-vY-u2Y"/>
                                 <exclude reference="Lvy-cl-Pq6"/>
+                                <exclude reference="6wN-kk-nXE"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -120,6 +130,7 @@
                                 <include reference="L4o-i6-GlH"/>
                                 <include reference="zKK-vY-u2Y"/>
                                 <include reference="Lvy-cl-Pq6"/>
+                                <include reference="6wN-kk-nXE"/>
                             </mask>
                         </variation>
                     </view>
@@ -128,6 +139,7 @@
                         <outlet property="enterNameTextField" destination="qjA-XT-I2W" id="SZZ-n0-kNB"/>
                         <outlet property="mailButton" destination="zKK-vY-u2Y" id="DPq-mQ-Yok"/>
                         <outlet property="messageLabel" destination="Lvy-cl-Pq6" id="hPb-SB-50v"/>
+                        <outlet property="nameLabel" destination="6wN-kk-nXE" id="ebZ-4c-XNW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
